fixed up my contacts so you can click the icon now and it goes to the my git lin or email and got the animation working so my name flickers !

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,59 @@ a{
     right: 20%;
     color: ivory;
     font-size: 25px;
-    
+    opacity: 0.15;  
 }
+
+.herotext{
+    opacity: 1;
+    animation: flickerhero 5s linear  reverse infinite;
+  }
+  
+@keyframes flickerhero {
+    0% {
+        opacity: 0.4;
+    }
+    5% {
+        opacity: 0.5;
+    }
+    10% {
+        opacity: 0.6;
+    }
+    15% {
+        opacity: 0.85;
+    }
+    25% {
+        opacity: 0.5;
+    }
+    30% {
+        opacity: 1;
+    }
+    35% {
+        opacity: 0.1;
+    }
+    40% {
+        opacity: 0.25;
+    }
+    45% {
+        opacity: 0.5;
+    }
+    60% {
+        opacity: 1;
+    }
+    70% {
+        opacity: 0.85;
+    }
+    80% {
+        opacity: 0.4;
+    }
+    90% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+  
 
 .navbar {
     background-color: rgb(253, 1, 1);
@@ -45,31 +96,35 @@ a{
   
 
 .project{
-    width: 50%;
+    width: 20%;
     height: 0%;
     text-align: center;
     background-color:#040b0b;
     color: ivory;
     font-size: 20px;       
     float: left;
+    margin-left: 20%;
+    margin-top: 2%;
 }
 
 .contact{
-    width: 50%;
+    width: 20%;
     height: 0%;
-    position: relative;
     float: right;
     text-align: center; 
     background-color: #040b0b;
     color: ivory;
     box-sizing: border-box;
     font-size: 20px;
+    margin-right: 20%;
+    margin-top: 2%;
 }
 
 .aboutme{
-    width: 50vh;
+    width: 30%;
     height: 20%;
     text-align: center;
+    position: relative;
     border: 0px;
     border-style: solid;
     background: border-box;
@@ -77,7 +132,7 @@ a{
     color: white;
     font-size: 20px; 
     margin-top: 30%;
-    margin-left: 70vh;
+    margin-left: 38%;
 }
 
 .footer {
